[package]
name = "msgpack2json"
version = "0.1.0"
authors = ["Jason Rogers <jacaetevha@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp = "^0.8"
rmp-serialize = "^0.8"
rmp-serde = "^0.13"
rmpv = "^0.4"
serde_bytes = "^0.11"
serde_derive = "^1.0"
serde_json = "^1.0"
